Validated matching algorithm

--- a/web/static_server/css/main.css
+++ b/web/static_server/css/main.css
@@ -1,13 +1,13 @@
 /*=======================================================================
-* Template Name: Oficiona
-* Template URI: http://codepassenger.com/html/Oficiona
+* Template Name: Concordia ACE
+* Template URI: http://codepassenger.com/html/Concordia ACE
 * Author: CodePassenger
 * Author URI: http://codepassenger.com/
 * Description: Job Board HTML Template
 * Version: 1.3
 * License: GPL v2 or later
 * License URI: http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
-* Tags: html, template, Oficiona, Job, Job Board, bootstrap, codepassenger
+* Tags: html, template, Concordia ACE, Job, Job Board, bootstrap, codepassenger
 ======================================================================= */
 /* Table of content
 --------------------------------------------
