--- a/web/templates/add-resume.html
+++ b/web/templates/add-resume.html
@@ -68,7 +68,7 @@
                   <div class="account-card">
                     <div class="header-top-account-info">
                       <a href="#" class="account-thumb">
-                        <img src="images/account/thumb-1.jpg" class="img-fluid" alt="">
+                        <img src="#" class="img-fluid" alt="">
                       </a>
                       {% if user.is_authenticated %}
                       <div class="account-body">
@@ -527,7 +527,7 @@
                 <div class="row">
                   <div class="col-lg-6">
                     <p class="copyright-text">Software developped by Concordia Capstone ACE team. <a href= "#"></a> 2020</p>
-                    <p class="copyright-text"><a href= "#">Style Templates used under license, Oficiona 2019</a></p>
+                    <p class="copyright-text"><a href= "#">Style Templates used under license, Concordia ACE 2019</a></p>
                   </div>
                   <div class="col-lg-6">
                     <div class="back-to-top">
@@ -574,7 +574,7 @@
       let form_edu_count = Number($("[name=extra_edu_count]").val());
       let form_exp_count = Number($("[name=extra_exp_count]").val());
       let form_doc_count = Number($("[name=extra_doc_count]").val());
-      
+
 
       $(function() {
           var pos = localStorage.getItem('my-scroll-pos', 0);
