--- a/web/templates/dashboard-manage-employer.html
+++ b/web/templates/dashboard-manage-employer.html
@@ -219,7 +219,7 @@
                     {% if user.user_type != 1 %}
                     <li><i class="fas fa-briefcase"></i><a href="/manageJobs/">Manage Jobs</a></li>
                     {% endif %}
-                    <li><i class="fas fa-users"></i><a href="/jobApplications/">Manage Applications</a></li>
+                    <li><i class="fas fa-users"></i><a href="/jobApplications/">Applications</a></li>
                     {% if user.user_type != 1 %}
                     <li><i class="fas fa-heart"></i><a href="/employerRanking">Interview Ranking</a></li>
                     {% else %}
@@ -376,7 +376,7 @@
                 <div class="row">
                   <div class="col-lg-6">
                     <p class="copyright-text">Software developped by Concordia Capstone ACE team. <a href= "#"></a> 2020</p>
-                    <p class="copyright-text"><a href= "#">Style Templates used under license, Oficiona 2019</a></p>
+                    <p class="copyright-text"><a href= "#">Style Templates used under license, Concordia ACE 2019</a></p>
                   </div>
                   <div class="col-lg-6">
                     <div class="back-to-top">
