--- a/web/templates/dashboard-ranking-candidate.html
+++ b/web/templates/dashboard-ranking-candidate.html
@@ -170,7 +170,7 @@
               <div class="dashboard-sidebar">
                 <div class="company-info">
                   <div class="thumb">
-                    <img src="dashboard/images/company-logo.png" class="img-fluid" alt="">
+                    <img src="dashboard/#" class="img-fluid" alt="">
                   </div>
                   <div class="company-body">
                     <h5>Degoin</h5>
@@ -207,7 +207,7 @@
                     {% if user.user_type != 1 %}
                     <li><i class="fas fa-briefcase"></i><a href="/manageJobs/">Manage Jobs</a></li>
                     {% endif %}
-                    <li><i class="fas fa-users"></i><a href="/jobApplications/">Manage Applications</a></li>
+                    <li><i class="fas fa-users"></i><a href="/jobApplications/">Applications</a></li>
                     <li class="active"><i class="fas fa-heart"></i><a href="/candidateRanking">Interview Ranking</a></li>
                     {% if user.user_type == 4 %}
                     <li><i class="fas fa-plus-square"></i><a href="/matchDay">Admin Matchday</a></li>
@@ -361,7 +361,7 @@
                 <div class="row">
                   <div class="col-lg-6">
                     <p class="copyright-text">Software developped by Concordia Capstone ACE team. <a href= "#"></a> 2020</p>
-                    <p class="copyright-text"><a href= "#">Style Templates used under license, Oficiona 2019</a></p>
+                    <p class="copyright-text"><a href= "#">Style Templates used under license, Concordia ACE 2019</a></p>
                   </div>
                   <div class="col-lg-6">
                     <div class="back-to-top">
