--- a/web/templates/email-match-candidate.html
+++ b/web/templates/email-match-candidate.html
@@ -4,7 +4,7 @@ Hi {{ user.firstName }},
 Congratulations! You have been matched with {{job.company.name}} for {{ job.title }}. 
 
 We've shared your contact information with your new employer and they will be in touch with you soon.
-Visit http://{{ domain }}{% url 'activate' uidb64=uid token=token %} for more details. 
+Visit http://{{ domain }} for more details. 
 
 The Concordia ACE Team
 Please do not reply this unmonitored email address.
