--- a/web/templates/home-2.html
+++ b/web/templates/home-2.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Oficiona</title>
+    <title>Concordia ACE</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 
@@ -894,7 +894,7 @@
         <div class="row">
           <div class="col">
             <div class="app-download">
-              <h2>Get Oficiona App</h2>
+              <h2>Get Concordia ACE App</h2>
               <p>Searching for jobs never been that easy. Now you can find job matched your career expectation</p>
               <div class="app-download-button">
                 <a href="#" class="apple-app">Apple Store</a>
@@ -956,7 +956,7 @@
                   <ul>
                     <li><a href="#">Create Account</a></li>
                     <li><a href="#">Career Counseling</a></li>
-                    <li><a href="#">My Oficiona</a></li>
+                    <li><a href="#">My Concordia ACE</a></li>
                     <li><a href="#">FAQ</a></li>
                     <li><a href="#">Video Guides</a></li>
                   </ul>
@@ -1000,7 +1000,7 @@
               <div class="footer-bottom border-top">
                 <div class="row">
                   <div class="col-lg-6">
-                    <p class="copyright-text">Copyright <a href="#">Oficiona</a> 2019, All right reserved</p>
+                    <p class="copyright-text">Copyright <a href="#">Concordia ACE</a> 2019, All right reserved</p>
                   </div>
                   <div class="col-lg-6">
                     <div class="back-to-top">
