--- a/web/templates/invoice.html
+++ b/web/templates/invoice.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Oficiona</title>
+    <title>Concordia ACE</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -104,12 +104,12 @@
                 <div class="invoice-footer">
                   <div class="invoice-by">
                     <h4>Invoice By</h4>
-                    <h6 class="name">Oficiona LTD.</h6>
+                    <h6 class="name">Concordia ACE LTD.</h6>
                     <p>438 Rathdowne Road Carlton, Victoria 3001</p>
                     <div class="invoice-contact">
                       <span>support@yourmail.com</span>
                       <span>+99 125 4827 22</span>
-                      <span><a href="#">www.Oficiona.com</a></span>
+                      <span><a href="#">www.Concordia ACE.com</a></span>
                     </div>
                   </div>
                   <div class="bill">
