--- a/web/templates/job-listing-with-map.html
+++ b/web/templates/job-listing-with-map.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Oficiona</title>
+    <title>Concordia ACE</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -713,7 +713,7 @@
     <!-- Footer -->
     <footer class="slim-footer-wrap alice-bg">
       <div class="slim-footer">
-        <p class="copyright-text">Copyright <a href="#">Oficiona</a> 2019, All right reserved</p>
+        <p class="copyright-text">Copyright <a href="#">Concordia ACE</a> 2019, All right reserved</p>
         <div class="footer-social-link">
           <ul>
             <li><a href="#"><i data-feather="facebook"></i></a></li>
