--- a/web/templates/terms-and-condition-2.html
+++ b/web/templates/terms-and-condition-2.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Oficiona</title>
+    <title>Concordia ACE</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -264,7 +264,7 @@
                   </ul>
                   <div class="tab-content" id="myTabContent">
                     <div class="tab-pane fade show active" id="privacy" role="tabpanel" aria-labelledby="privacy-tab">
-                      <h4 id="welcome">Welcome To Oficiona</h4>
+                      <h4 id="welcome">Welcome To Concordia ACE</h4>
                       <p>Expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone.</p>
                       <p>Who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure.</p>
                       <h5 id="termss">Our Terms</h5>
@@ -300,7 +300,7 @@
                       <p>to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</p>
                     </div>
                     <div class="tab-pane fade" id="terms" role="tabpanel" aria-labelledby="terms-tab">
-                      <h4>Welcome To Oficiona</h4>
+                      <h4>Welcome To Concordia ACE</h4>
                       <p>Expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone.</p>
                       <p>Who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure.</p>
                       <h5>Our Terms</h5>
@@ -336,7 +336,7 @@
                       <p>to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</p>
                     </div>
                     <div class="tab-pane fade" id="regal" role="tabpanel" aria-labelledby="regal-tab">
-                      <h4>Welcome To Oficiona</h4>
+                      <h4>Welcome To Concordia ACE</h4>
                       <p>Expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone.</p>
                       <p>Who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure.</p>
                       <h5>Our Terms</h5>
@@ -560,7 +560,7 @@
                   <ul>
                     <li><a href="#">Create Account</a></li>
                     <li><a href="#">Career Counseling</a></li>
-                    <li><a href="#">My Oficiona</a></li>
+                    <li><a href="#">My Concordia ACE</a></li>
                     <li><a href="#">FAQ</a></li>
                     <li><a href="#">Video Guides</a></li>
                   </ul>
@@ -610,7 +610,7 @@
                     </div>
                   </div>
                   <div class="col-xl-4 col-lg-4 order-lg-1">
-                    <p class="copyright-text">Copyright <a href="#">Oficiona</a> 2019, All right reserved</p>
+                    <p class="copyright-text">Copyright <a href="#">Concordia ACE</a> 2019, All right reserved</p>
                   </div>
                   <div class="col-xl-4 col-lg-3 order-lg-3">
                     <div class="back-to-top">
