--- a/web/templates/activate-account.html
+++ b/web/templates/activate-account.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Oficiona</title>
+    <title>Concordia ACE</title>
  
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href={% static "assets/css/bootstrap.min.css" %}>
@@ -64,7 +64,7 @@
                   <div class="account-card">
                     <div class="header-top-account-info">
                       <a href="#" class="account-thumb">
-                        <img src="images/account/thumb-1.jpg" class="img-fluid" alt="">
+                        <img src={% static "images/account/thumb-1.jpg" %}class="img-fluid" alt="">
                       </a>
                       {% if user.is_authenticated %}
                       <div class="account-body">
