--- a/web/templates/dashboard-ranking.html
+++ b/web/templates/dashboard-ranking.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Oficiona</title>
+    <title>Concordia ACE</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href={% static "assets/css/bootstrap.min.css" %}>
@@ -164,9 +164,10 @@
                         <td class="title">
                           <h5><a href="/job-details/{{job.job.id}}">{{job.title}} [{{job.id}}]</a></h5>
                           <div class="info">
-                            <span class="office-location"><a href="#"><i data-feather="map-pin"></i>{{job.company.name}}</a></span>
+                            <span class="office-location"><a href="/company-details/{{job.company.pk}}"><i data-feather="map-pin"></i>{{job.company.name}}</a></span>
                             <span class="job-type full-time"><a href="#"><i data-feather="clock"></i>{{job.created_at}}</a></span>
                           </div>
+                          <h5> Total Vacancy: {{job.vacancy}} </h5>
                         </td>
                       </tr>
                       {% for rank in form.get_ranking_fields  %}
@@ -203,7 +204,7 @@
               <div class="dashboard-sidebar">
                 <div class="company-info">
                   <div class="thumb">
-                    <img src="dashboard/images/company-logo.png" class="img-fluid" alt="">
+                    <img src="dashboard/#" class="img-fluid" alt="">
                   </div>
                   <div class="company-body">
                     <h5>{{user.firstName}} {{user.lastName}}</h5>
@@ -240,7 +241,7 @@
                     {% if user.user_type != 1 %}
                     <li><i class="fas fa-briefcase"></i><a href="/manageJobs/">Manage Jobs</a></li>
                     {% endif %}
-                    <li><i class="fas fa-users"></i><a href="/jobApplications/">Manage Applications</a></li>
+                    <li><i class="fas fa-users"></i><a href="/jobApplications/">Applications</a></li>
                     <li class="active"><i class="fas fa-heart"></i><a href="/employerRanking">Interview Ranking</a></li>
                     {% if user.user_type == 4 %}
                     <li><i class="fas fa-plus-square"></i><a href="/matchDay">Admin Matchday</a></li>
@@ -394,7 +395,7 @@
                 <div class="row">
                   <div class="col-lg-6">
                     <p class="copyright-text">Software developped by Concordia Capstone ACE team. <a href= "#"></a> 2020</p>
-                    <p class="copyright-text"><a href= "#">Style Templates used under license, Oficiona 2019</a></p>
+                    <p class="copyright-text"><a href= "#">Style Templates used under license, Concordia ACE 2019</a></p>
                   </div>
                   <div class="col-lg-6">
                     <div class="back-to-top">
