--- a/web/templates/employer-dashboard-message.html
+++ b/web/templates/employer-dashboard-message.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Oficiona</title>
+    <title>Concordia ACE</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -362,7 +362,7 @@
               <div class="dashboard-sidebar">
                 <div class="company-info">
                   <div class="thumb">
-                    <img src="dashboard/images/company-logo.png" class="img-fluid" alt="">
+                    <img src="dashboard/#" class="img-fluid" alt="">
                   </div>
                   <div class="company-body">
                     <h5>Degoin</h5>
@@ -500,7 +500,7 @@
                   <ul>
                     <li><a href="#">Create Account</a></li>
                     <li><a href="#">Career Counseling</a></li>
-                    <li><a href="#">My Oficiona</a></li>
+                    <li><a href="#">My Concordia ACE</a></li>
                     <li><a href="#">FAQ</a></li>
                     <li><a href="#">Video Guides</a></li>
                   </ul>
@@ -550,7 +550,7 @@
                     </div>
                   </div>
                   <div class="col-xl-4 col-lg-4 order-lg-1">
-                    <p class="copyright-text">Copyright <a href="#">Oficiona</a> 2019, All right reserved</p>
+                    <p class="copyright-text">Copyright <a href="#">Concordia ACE</a> 2019, All right reserved</p>
                   </div>
                   <div class="col-xl-4 col-lg-3 order-lg-3">
                     <div class="back-to-top">
