--- a/web/templates/employer-dashboard-post-job.html
+++ b/web/templates/employer-dashboard-post-job.html
@@ -409,7 +409,7 @@
               <div class="dashboard-sidebar">
                 <div class="company-info">
                   <div class="thumb">
-                    <img src="dashboard/images/company-logo.png" class="img-fluid" alt="">
+                    <img src="dashboard/#" class="img-fluid" alt="">
                   </div>
                   <div class="company-body">
                     <h5>Degoin</h5>
@@ -547,7 +547,7 @@
                   <ul>
                     <li><a href="/register">Create Account</a></li>
                     <li><a href="#">Career Counseling</a></li>
-                    <li><a href="#">My Oficiona</a></li>
+                    <li><a href="#">My Concordia ACE</a></li>
                     <li><a href="#">FAQ</a></li>
                     <li><a href="#">Video Guides</a></li>
                   </ul>
@@ -597,7 +597,7 @@
                     </div>
                   </div>
                   <div class="col-xl-4 col-lg-4 order-lg-1">
-                    <p class="copyright-text">Copyright <a href="#">Oficiona</a> 2019, All right reserved</p>
+                    <p class="copyright-text">Copyright <a href="#">Concordia ACE</a> 2019, All right reserved</p>
                   </div>
                   <div class="col-xl-4 col-lg-3 order-lg-3">
                     <div class="back-to-top">
