--- a/web/templates/faq.html
+++ b/web/templates/faq.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Oficiona</title>
+    <title>Concordia ACE</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -281,7 +281,7 @@
                               <div class="card-header" id="headingOne">
                                 <h5 class="mb-0">
                                   <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                    What is Oficiona ?
+                                    What is Concordia ACE ?
                                   </button>
                                 </h5>
                               </div>
@@ -610,7 +610,7 @@
                   <ul>
                     <li><a href="#">Create Account</a></li>
                     <li><a href="#">Career Counseling</a></li>
-                    <li><a href="#">My Oficiona</a></li>
+                    <li><a href="#">My Concordia ACE</a></li>
                     <li><a href="#">FAQ</a></li>
                     <li><a href="#">Video Guides</a></li>
                   </ul>
@@ -660,7 +660,7 @@
                     </div>
                   </div>
                   <div class="col-xl-4 col-lg-4 order-lg-1">
-                    <p class="copyright-text">Copyright <a href="#">Oficiona</a> 2019, All right reserved</p>
+                    <p class="copyright-text">Copyright <a href="#">Concordia ACE</a> 2019, All right reserved</p>
                   </div>
                   <div class="col-xl-4 col-lg-3 order-lg-3">
                     <div class="back-to-top">
