--- a/web/templates/job-listing.html
+++ b/web/templates/job-listing.html
@@ -183,7 +183,7 @@
                           <a href="/" class="button">Closed</a>
                           {% endif %}
                         </div>
-                        <p class="deadline">Deadline: {{job.expirationDate}}</p>
+                        <p class="deadline">Status: {{job.status}}</p>
                       </div>
                     </div>
                   </div>
@@ -391,7 +391,7 @@
                 <div class="row">
                   <div class="col-lg-6">
                     <p class="copyright-text">Software developped by Concordia Capstone ACE team. <a href= "#"></a> 2020</p>
-                    <p class="copyright-text"><a href= "#">Style Templates used under license, Oficiona 2019</a></p>
+                    <p class="copyright-text"><a href= "#">Style Templates used under license, Concordia ACE 2019</a></p>
                   </div>
                   <div class="col-lg-6">
                     <div class="back-to-top">
