--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -139,11 +139,11 @@
                 <div class="form-group">
                   {{form.password}}
                 </div>
-
+                {% csrf_token %}
                   <script src='https://www.google.com/recaptcha/api.js'></script>
                   <div class="g-recaptcha" data-sitekey="{{recaptchaPubKey}}"></div>
                   <br>
-
+                {% endblock %}
                 <div class="more-option">
                   <div class="mt-0 terms">
                     <input class="custom-radio" type="checkbox" id="radio-4" name="termsandcondition">
