--- a/web/templates/acc_active_email.html
+++ b/web/templates/acc_active_email.html
@@ -1,9 +1,9 @@
 {% autoescape off %}
 Hi {{ user.firstName }},
 Please click on the link to confirm your registration with Concordia ACE,
-http://{{ domain }}{% url 'activate' uidb64=uid token=token %}
+https://{{ domain }}{% url 'activate' uidb64=uid token=token %}
 
 The Concordia ACE Team
 Please do not reply this unmonitored email address.
-Never made a {{user.email}} ACE account? Prevent identity theft and let us know. You may suspend this account here: http://{{ domain }}{% url 'password_reset'  %}
+Never made a {{user.email}} ACE account? Prevent identity theft and let us know. You may suspend this account here: https://{{ domain }}{% url 'password_reset'  %}
 {% endautoescape %}
