--- a/web/templates/activationLink.html
+++ b/web/templates/activationLink.html
@@ -106,8 +106,8 @@
             <div class="section-padding-150 error-page-wrap text-center white-bg">
               <div class="icon">
               </div>
-              <h1>404</h1>
-              <p>{{message|safe}}</p>
+              <h1>ACE</h1>
+              <p>{{message|safe}} {% if resend %}<a href="/resend_activation"> <b> Click here </b> to resend </a> {% endif %}</p>
               <a href="/" class="button">Go Back</a>
             </div>
           </div>
