--- a/web/templates/dashboard-alert.html
+++ b/web/templates/dashboard-alert.html
@@ -316,7 +316,7 @@
                 <div class="dashboard-menu">
                   <ul>
                     <li><i class="fas fa-home"></i><a href="#">Dashboard</a></li>
-                    <li><i class="fas fa-user"></i><a href="#">Edit Profile</a></li>
+                    <li><i class="fas fa-user"></i><a href="/edit-profile">Edit Profile</a></li>
                     <li><i class="fas fa-file-alt"></i><a href="#">Resume</a></li>
                     <li><i class="fas fa-edit"></i><a href="#">Edit Resume</a></li>
                     <li><i class="fas fa-heart"></i><a href="#">Bookmarked</a></li>
