--- a/web/templates/dashboard-match.html
+++ b/web/templates/dashboard-match.html
@@ -215,7 +215,7 @@
                         <span class="badge">{{newMessageCount}}</span>
                       </div>
                     </a></li>
-                    <li><i class="fas fa-user"></i><a href="employer-dashboard-edit-profile.html">Edit Profile</a></li>
+                    <li><i class="fas fa-user"></i><a href="/edit-profile">Edit Profile</a></li>
                     {% if user.user_type == 4 %}
                     <li><i class="fas fa-users"></i><a href="/manageEmployers/">Manage Employer</a></li>
                     <li><i class="fas fa-briefcase"></i><a href="/manageCompanies/">Manage Company</a></li>
