--- a/web/templates/employer-dashboard-message.html
+++ b/web/templates/employer-dashboard-message.html
@@ -385,7 +385,7 @@
                 <div class="dashboard-menu">
                   <ul>
                     <li><i class="fas fa-home"></i><a href="employer-dashboard.html">Dashboard</a></li>
-                    <li><i class="fas fa-user"></i><a href="employer-dashboard-edit-profile.html">Edit Profile</a></li>
+                    <li><i class="fas fa-user"></i><a href="/edit-profile">Edit Profile</a></li>
                     <li><i class="fas fa-briefcase"></i><a href="employer-dashboard-manage-job.html">Manage Jobs</a></li>
                     <li><i class="fas fa-users"></i><a href="employer-dashboard-manage-candidate.html">Manage Candidates</a></li>
                     <li><i class="fas fa-heart"></i><a href="#">Shortlisted Resumes</a></li>
