--- a/web/templates/dashboard-admin-matching-control.html
+++ b/web/templates/dashboard-admin-matching-control.html
@@ -174,7 +174,7 @@
                 <div class="dashboard-menu">
                   <ul>
                     <li><i class="fas fa-home"></i><a href="employer-dashboard.html">Dashboard</a></li>
-                    <li><i class="fas fa-user"></i><a href="employer-dashboard-edit-profile.html">Edit Profile</a></li>
+                    <li><i class="fas fa-user"></i><a href="/edit-profile">Edit Profile</a></li>
                     <li><i class="fas fa-briefcase"></i><a href="/manageJobs/">Manage Jobs</a></li>
                     <li><i class="fas fa-users"></i><a href="/jobApplications/">Applications</a></li>
                     <li class="active"><i class="fas fa-heart"></i><a href="/employerRanking">Interview Ranking</a></li>
