--- a/web/static/css/main.css
+++ b/web/static/css/main.css
@@ -10278,3 +10278,67 @@ input[type=submit]:hover {
 input[type="submit"]:active {
 	opacity:0.4;
 }
+
+.notifier {
+  position: relative;
+  display: inline-block;
+}
+
+.bell {
+  font-size: 26px;
+  color: #FFF;
+  transition: 0.3s;
+}
+
+.bell:hover {
+  color: #EF476F;
+}
+
+.badge {
+  position: absolute;
+  top: -5px;
+  left: 24px;
+  padding: 0 5px;
+  font-size: 16px;
+  line-height: 22px;
+  height: 22px;
+  background: #EF476F;
+  color: #FFF;
+  border-radius: 11px;
+  white-space: nowrap;
+}
+
+.notifier.green .badge {
+  background: #06D6A0;
+}
+
+.notifier.green .bell:hover {
+  color: #06D6A0;
+}
+
+.notifier.new .badge {
+  animation: pulse 2s ease-out;
+  animation-iteration-count: 1;
+}
+
+@keyframes pulse {
+  40% {
+    transform: scale3d(1, 1, 1);
+  }
+
+  50% {
+    transform: scale3d(1.3, 1.3, 1.3);
+  }
+
+  55% {
+    transform: scale3d(1, 1, 1);
+  }
+  
+  60% {
+    transform: scale3d(1.3, 1.3, 1.3);
+  }
+
+  65% {
+    transform: scale3d(1, 1, 1);
+  }
+}
