--- a/web/templates/edit-profile.html
+++ b/web/templates/edit-profile.html
@@ -128,55 +128,64 @@
             <div class="dashboard-container">
               <div class="dashboard-content-wrapper">
                 <div class="manage-job-container">
-                  <input type="submit" value="Sort Chronologically">
-                  <input type="submit" value="Sort Alphabetically">
-                  {% if user.user_type == 4 %}
-                  <input type="submit" value="Sort by Company">
-                  {% endif %}
-                  <table class="table">
-                    <thead>
-                      <tr>
-                        <th>Job Title</th>
-                        <th>Get Applications List (Click Below)</th>
-                        <th>Deadline</th>
-                        <th>Status</th>
-                        <th class="action">Action</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      {% for job in jobs %}
-                      <tr class="job-items">
-                        <td class="title">
-                          <h5><a href="/job-details/{{job.job.id}}">{{job.job.title}} [{{job.job.id}}]</a></h5>
-                          <div class="info">
-                            <span class="office-location"><a href="#"><i data-feather="map-pin"></i>{{job.job.company.name}}</a></span>
-                            <span class="job-type full-time"><a href="#"><i data-feather="clock"></i>{{job.job.created_at}}</a></span>
-                          </div>
-                        </td>
-                        <td class="application"><a href="/jobApplications/{{job.job.id}}">View {{job.count}} {% if user.user_type != 4 %} Approved {% endif %}Application(s)</a></td>
-                        <td class="deadline">{{job.job.expirationDate}}</td>
-                        <td class="status active">{{job.job.status}}</td>
-                        <td class="action">
-                          <a href="/jobApplications/{{job.job.id}}" class="preview" title="View all applications"><i data-feather="eye"></i></a>
-                          <a href="/admin/joblistings/job/{{job.job.id}}/change" class="edit" title="Edit (Admin only)"><i data-feather="edit"></i></a>
-                        </td>
-                      </tr>
-                      {% endfor %}
-                    </tbody>
-                  </table>
-                  <div class="pagination-list text-center">
-                    <nav class="navigation pagination">
-                      <div class="nav-links">
-                        <a class="prev page-numbers" href="#"><i class="fas fa-angle-left"></i></a>
-                        <a class="page-numbers" href="#">1</a>
-                        <span aria-current="page" class="page-numbers current">2</span>
-                        <a class="page-numbers" href="#">3</a>
-                        <a class="page-numbers" href="#">4</a>
-                        <a class="next page-numbers" href="#"><i class="fas fa-angle-right"></i></a>
-                      </div>
-                    </nav>                
-                  </div>
+
+                <h5><i></i> Click on Section Title to Edit  </h5>
+                <br>
+                 <div class="about-details details-section dashboard-section">
+                  <a href="post-job.html"><h4><i data-feather="edit"></i> General Information  </h4> </a>
+                <p> Name: {{request.user.preferredName}} {{request.user.firstName}} {{request.user.lastName}} </p>
+                <p> Email: {{request.user.email}} </p>
+                <p> Email is confirmed: {{request.user.is_email_confirmed}} </p>
+                <p> Email notification: {% if subject.notify_by_email %} On {% else %} off {% endif %} </p>
+                <p> Phone number: {{request.user.phoneNumber}} </p>
                 </div>
+                {% if  user.user_type == 1 %}
+                <div class="about-details details-section dashboard-section">
+                  <a href="post-job.html"><h4><i data-feather="edit"></i> Student Information  </h4> </a>
+                    <div class="buttons">
+                      <a href="/getFileWithAuth/5/{{request.user.pk}}/" class="button contact-download"><i data-feather="download"></i>Transcript</a>
+                      <br>
+                    </div>
+                    <br>
+                    <p> Concordia Email: {{subject.concordia_email}} </p>
+                    <p> Concordia Email is confirmed: {{subject.is_concordia_email_confirmed}} </p>
+                    <p> Student ID: {{subject.studentID}} </p>
+                    <p> Program of study: {{subject.program}} </p>
+                    <p> Credit completed: {{subject.creditCompleted}} </p>
+                    <p> Credit left: {{subject.creditLeft}} </p>
+                    <p> GPA: {{subject.gpa}} </p>
+                    <p> Citizenship completed: {{subject.citizenship}} </p>
+                    <p> Languages: </p>
+                    <div class="professonal-skill details-section">
+                    <div class="progress-group">
+                      {% for lan in languages%}
+                        <div class="progress-item">
+                          <div class="progress-head">
+                            {% if lan.language == "English" or lan.language == "French"%}
+                            <p class="progress-on">{{lan.language}}</p>
+                            {% else %}
+                            <p class="progress-on">{{lan.details}}</p>
+                            {% endif %}
+                          </div>
+                          <div class="progress-body">
+                            <div class="progress">
+                              <div class="progress-bar" role="progressbar" aria-valuenow="{{lan.fluency}}" aria-valuemin="0" aria-valuemax="100" style="width: 0;"></div>
+                            </div>
+                            <p class="progress-to">{{lan.fluency}}%</p>
+                          </div>
+                        </div>
+                        {% endfor %}
+                      </div>
+                    </div>
+                </div>
+                <div class="about-details details-section dashboard-section">
+                  <br>
+                  <a href="post-job.html"><h4><i data-feather="edit"></i> Reset Password  </h4> </a>
+                </div>
+                {% endif %}
+                </div>
+
+
               </div>
               <div class="dashboard-sidebar">
                 <div class="company-info">
@@ -206,13 +215,13 @@
                         <span class="badge">{{newMessageCount}}</span>
                       </div>
                     </a></li>
-                    <li><i class="fas fa-user"></i><a href="/edit-profile">Edit Profile</a></li>
+                    <li class="active"><i class="fas fa-user"></i><a href="/edit-profile">Edit Profile</a></li>
                     {% if user.user_type == 4 %}
                     <li><i class="fas fa-users"></i><a href="/manageEmployers/">Manage Employer</a></li>
                     <li><i class="fas fa-briefcase"></i><a href="/manageCompanies/">Manage Company</a></li>
                     {% endif %}
                     {% if user.user_type != 1 %}
-                    <li class="active"><i class="fas fa-briefcase"></i><a href="/manageJobs/">Manage Jobs</a></li>
+                    <li><i class="fas fa-briefcase"></i><a href="/manageJobs/">Manage Jobs</a></li>
                     {% endif %}
                     <li><i class="fas fa-users"></i><a href="/jobApplications/">Applications</a></li>
                     <li><i class="fas fa-heart"></i><a href="/employerRanking">Interview Ranking</a></li>
