Added edit candidate profile + confirm concordia email resend

--- a/web/templates/edit-profile.html
+++ b/web/templates/edit-profile.html
@@ -141,7 +141,7 @@
                 </div>
                 {% if  user.user_type == 1 %}
                 <div class="about-details details-section dashboard-section">
-                  <a href="post-job.html"><h4><i data-feather="edit"></i> Student Information  </h4> </a>
+                  <a href="/edit-profile/candidateInfo"><h4><i data-feather="edit"></i> Student Information and Confirm Concordia Email</h4> </a>
                     <div class="buttons">
                       <a href="/getFileWithAuth/5/{{request.user.pk}}/" class="button contact-download"><i data-feather="download"></i>Transcript</a>
                       <br>
